# CoseSignTool

./: .editorconfig  .gitignore  .orchestrator-snapshot-base  Advanced.md  CHANGELOG.md  CONTRIBUTING.md  CoseDetachedSignature.Nuspec  CoseDetachedSignature.md  CoseHandler.md  CoseIndirectSignature.md  CoseParser.md  CoseSign1.Abstractions.md  CoseSign1.Certificates.md  CoseSign1.md  CoseSignTool.md  CoseSignTool.sln  Directory.Build.props  Directory.Packages.props  README.md  STYLE.md  Troubleshooting.md  global.json  test.cose  test.txt
native/c/: CMakeLists.txt  README.md  collect-coverage.ps1
native/c/docs/: 01-consume-vcpkg.md  02-core-api.md  03-errors.md  04-packs.md  05-trust-plans.md  README.md
native/c/examples/: CMakeLists.txt  full_example.c  hello_cose.c  trust_policy_example.c
native/c/tests/: CMakeLists.txt  real_world_trust_plans_gtest.cpp  real_world_trust_plans_test.c  smoke_test.c  smoke_test_gtest.cpp
native/c_pp/: CMakeLists.txt  README.md  collect-coverage.ps1
native/c_pp/docs/: 01-consume-vcpkg.md  02-core-api.md  03-errors.md  04-packs.md  05-trust-plans.md  README.md
native/c_pp/examples/: CMakeLists.txt  full_example.cpp  hello_cose.cpp  trust_policy_example.cpp
native/c_pp/tests/: CMakeLists.txt  coverage_surface_gtest.cpp  real_world_trust_plans_gtest.cpp  real_world_trust_plans_test.cpp  smoke_test.cpp  smoke_test_gtest.cpp
native/cosesign1/: CMakeLists.txt
native/cosesign1-common/: CMakeLists.txt
native/cosesign1-common/cmake/: cosesign1_commonConfig.cmake.in
native/cosesign1-common/tests/: test_cose_sign1_model.cpp
native/cosesign1-mst/: CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
native/cosesign1-mst/cmake/: cosesign1_mstConfig.cmake.in
native/cosesign1-mst/src/: jwk_ec_key.cpp  jwks_fetcher_curl.cpp  mst_verifier.cpp  online_key_resolver.cpp
native/cosesign1-mst/tests/: test_mst_receipt_validation.cpp
native/cosesign1-validation/: CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
native/cosesign1-validation/cmake/: cosesign1_signatureConfig.cmake.in  cosesign1_validationConfig.cmake.in
native/cosesign1-validation/src/: composite_cose_sign1_validator.cpp  cose_sign1_hash_message_verifier.cpp  cose_sign1_signature_validator.cpp  cose_sign1_validation_builder.cpp  cose_sign1_verifier.cpp
native/cosesign1-validation/tests/: test_cose_sign1_hash_message_verifier.cpp  test_cose_sign1_validation_builder.cpp  test_coverage_misc.cpp  test_openssl_utils.cpp  test_utils.cpp  test_utils.h  test_validation_result.cpp  test_verify_bad_signature.cpp  test_verify_detached_payload.cpp  test_verify_es256.cpp  test_verify_mldsa.cpp  test_verify_more_cases.cpp  test_verify_ps256.cpp
native/cosesign1-x509/: CMakeLists.txt  README.md  vcpkg.json
native/cosesign1-x509/cmake/: cosesign1_x509Config.cmake.in
native/cosesign1-x509/src/: x5c_verifier.cpp
native/cosesign1-x509/tests/: test_x5c_verify_es256.cpp
native/cosesign1/cmake/: Config.cmake.in
native/cosesign1/include/: cosesign1.h  cosesign1.hpp
native/cosesign1/tests/: CMakeLists.txt  README.md  run_coverage.ps1  test_cosesign1_hpp.cpp  vcpkg.json
native/examples/cosesign1-hello-world/: CMakeLists.txt  README.md  main.cpp  vcpkg.json
native/rust/: .gitignore  Cargo.toml  README.md  allowed-dependencies.toml  cli-build-output.txt  cli-help-test-output.txt  collect-coverage.ps1  collect-native-coverage.ps1  compare-benchmarks.ps1  save-benchmark-baseline.ps1  test_results.txt  verify-coverage.ps1
native/rust/.cargo/: config.toml
native/rust/benches/: Cargo.toml
native/rust/cli/: Cargo.toml  README.md
native/rust/cose_openssl/: Cargo.toml  README.md
native/rust/cose_sign1_validation/: Cargo.toml  README.md
native/rust/cose_sign1_validation_azure_key_vault/: Cargo.toml  README.md
native/rust/cose_sign1_validation_certificates/: Cargo.toml  README.md
native/rust/cose_sign1_validation_demo/: Cargo.toml
native/rust/cose_sign1_validation_ffi/: Cargo.toml
native/rust/cose_sign1_validation_ffi_akv/: Cargo.toml
native/rust/cose_sign1_validation_ffi_certificates/: Cargo.toml
native/rust/cose_sign1_validation_ffi_mst/: Cargo.toml
native/rust/cose_sign1_validation_ffi_trust/: Cargo.toml
native/rust/cose_sign1_validation_test_utils/: Cargo.toml
native/rust/cose_sign1_validation_transparent_mst/: Cargo.toml  README.md
native/rust/cose_sign1_validation_trust/: Cargo.toml  README.md
native/rust/docs/: README.md  azure-key-vault-pack.md  cbor-providers.md  certificate-pack.md  demo-exe.md  detached-payloads.md  extension-points.md  ffi_guide.md  getting-started.md  memory-characteristics.md  signing_flow.md  transparent-mst-pack.md  troubleshooting.md  trust-model.md  trust-subjects.md  validator-architecture.md
native/rust/scripts/: check_repo_rules.py
native/rust/tools/: coverage_missed.ps1
rust/: Cargo.toml  README.md  collect-coverage.ps1
rust/cosesign1/: Cargo.toml
rust/cosesign1-abstractions/: Cargo.toml
rust/cosesign1-abstractions/src/: header_map.rs  key_provider.rs  lib.rs  message_validator.rs  options.rs  parsed_cose_sign1.rs  validation_result.rs
rust/cosesign1-common/: Cargo.toml
rust/cosesign1-common/src/: cose_sign1.rs  header_map.rs  lib.rs
rust/cosesign1-common/tests/: cose_sign1_error_tests.rs  cose_sign1_more_error_tests.rs  header_map_clear_tests.rs  header_map_more_tests.rs  parse_cose_sign1_tests.rs  sig_structure_tests.rs  unprotected_header_decode_tests.rs
rust/cosesign1-ffi/: Cargo.toml
rust/cosesign1-ffi-abstractions/: Cargo.toml
rust/cosesign1-ffi-abstractions/src/: lib.rs
rust/cosesign1-ffi-abstractions/tests/: abstractions_ffi_tests.rs
rust/cosesign1-ffi-mst/: Cargo.toml
rust/cosesign1-ffi-mst/src/: lib.rs
rust/cosesign1-ffi-mst/tests/: coverage_smoke_tests.rs  mst_ffi_tests.rs
rust/cosesign1-ffi-x509/: Cargo.toml
rust/cosesign1-mst/: Cargo.toml
rust/cosesign1-validation/: Cargo.toml
rust/cosesign1-x509/: Cargo.toml
rust/docs/: README.md  architecture.md  examples.md  extending.md  mst-verifier.md  sequence-diagrams.md  testing-and-coverage.md  verification.md
(+2866 files in other folders)
